[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyoverleaf/_version.py"

[project]
name = "pyoverleaf"
authors = [
    {name = "Jonas Kulhanek", email = "jonas.kulhanek@live.com"},
]
description = "Overleaf API and simple CLI"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["overleaf", "api"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "browser-cookie3",
    "websocket-client",
    "click",
    "diff-match-patch>=20241021",
]
dynamic = ["version"]

[project.scripts]
pyoverleaf = "pyoverleaf.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.8.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with ruff formatter
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "W191",   # tab-indentation

    # Docstring style conflicts - must pick one
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)

    # Exception messages - too pedantic for most projects
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "TRY003", # Avoid specifying long messages outside the exception class

    # TODOs - we use our own judgment
    "FIX002", # Line contains TODO
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO

    # Boolean arguments - not always a code smell
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition

    # Naming conventions
    "N818", # Exception name should be named with an Error suffix

    # Pylint rules
    "PLR0911", # too-many-return-statements - early return pattern
    "PLR2004", # magic-value-comparison - inline constants are fine

    # Type narrowing
    "S101", # Use of assert - required by ty for type narrowing

    # Manual review - ruff lacks info severity, so we check these manually
    "ANN401",  # Dynamically typed expressions (typing.Any)
    "PLC0415", # import-outside-top-level
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # *args/**kwargs with Any is acceptable

[tool.ruff.lint.mccabe]
max-complexity = 15 # Default is 10

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ARG",    # Unused function args - fixtures are functionally relevant
    "SLF001", # Private member accessed - tests need to access internals
    "S108",   # Probable insecure usage of temporary file or directory
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8 # Default is 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.11"
